--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ body {
 
 /* Search keyword highlighting */
 mark {
-  background-color: #fff3cd;
-  color: #856404;
+  background-color: #fdd835;
+  color: #000;
   padding: 2px 4px;
   border-radius: 3px;
   font-weight: bold;
